force-app/main/default/objects/Service_Ticket_Line__c/Service_Ticket_Line__c.object-meta.xml
<CustomObject>
    <description>Service ticket object in Community</description>
    <label>Service Ticket Line</label>
    <nameField>
        <displayFormat>STL-{0000000}</displayFormat>
        <label>Service Ticket Line #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Ticket Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>