force-app/main/default/objects/Service_Ticket_Line__c/fields/Brand_Quote__c.field-meta.xml
<CustomField>
    <fullName>Brand_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Quote</label>
    <referenceTo>Brand_Quote__c</referenceTo>
    <relationshipLabel>Service Ticket Lines</relationshipLabel>
    <relationshipName>Service_Ticket_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>