force-app/main/default/objects/Service_Ticket_Line__c/fields/COA_Number__c.field-meta.xml
<CustomField>
    <fullName>COA_Number__c</fullName>
    <inlineHelpText>This field is required ONLY for COA Transfers. Please enter the COA number that corresponds to the Harvest Batch or Lot Code.</inlineHelpText>
    <label>COA Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>