force-app/main/default/objects/Service_Ticket_Line__c/fields/Desired_Retail_Ready_Form__c.field-meta.xml
<CustomField>
    <fullName>Desired_Retail_Ready_Form__c</fullName>
    <inlineHelpText>Please select the target weight per unit after transformation. Max allowance is 3% net weight variance</inlineHelpText>
    <label>Desired Net Weight or Qty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Desired_Net_Weight_or_Qty</valueSetName>
    </valueSet>
</CustomField>