force-app/main/default/objects/Service_Ticket_Line__c/fields/Expected_Arrival_At_Filligreen__c.field-meta.xml
<CustomField>
    <fullName>Expected_Arrival_At_Filligreen__c</fullName>
    <inlineHelpText>Please enter the date when ALL materials will arrive or requested drop-off/pick-up</inlineHelpText>
    <label>Pick-up or Arrival Date</label>
    <type>Date</type>
</CustomField>