force-app/main/default/objects/Service_Ticket_Line__c/fields/FG_New_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>FG_New_Product_Name__c</fullName>
    <formula>New_Packaged_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FG New Product Name</label>
    <type>Text</type>
</CustomField>