force-app/main/default/objects/Service_Ticket_Line__c/fields/Filligreen_Packaging_Date__c.field-meta.xml
<CustomField>
    <fullName>Filligreen_Packaging_Date__c</fullName>
    <inlineHelpText>Tentative date to start packaging, estimation based on materials and scope being established</inlineHelpText>
    <label>Del_Planned Date</label>
    <type>Date</type>
</CustomField>