force-app/main/default/objects/Service_Ticket_Line__c/fields/Harvest_Batch_Code__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Batch_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch ID</label>
    <referenceTo>Harvest_Batch_Code__c</referenceTo>
    <relationshipLabel>Service Ticket Lines (Harvest Batch Code)</relationshipLabel>
    <relationshipName>Service_Ticket_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>