force-app/main/default/objects/Service_Ticket_Line__c/fields/Harvest_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Harvest_Batch_ID__c</fullName>
    <inlineHelpText>Please enter the the Harvest Batch ID or Lot Code. This will be shall match the COA after testing</inlineHelpText>
    <label>Harvest Batch ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>