force-app/main/default/objects/Service_Ticket_Line__c/fields/Large_Label_Qty__c.field-meta.xml
<CustomField>
    <fullName>Large_Label_Qty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Large Label Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>