force-app/main/default/objects/Service_Ticket_Line__c/fields/New_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>New_Batch_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Del_New Batch ID</label>
    <referenceTo>Harvest_Batch_Code__c</referenceTo>
    <relationshipLabel>Service Ticket Lines</relationshipLabel>
    <relationshipName>Service_Ticket_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>