force-app/main/default/objects/Service_Ticket_Line__c/fields/New_Packaged_Product__c.field-meta.xml
<CustomField>
    <fullName>New_Packaged_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the new product name, which product will become.</inlineHelpText>
    <label>New Packaged Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Service Ticket Lines (New Packaged Product)</relationshipLabel>
    <relationshipName>Service_Ticket_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>