force-app/main/default/objects/Service_Ticket_Line__c/fields/Package_Type__c.field-meta.xml
<CustomField>
    <fullName>Package_Type__c</fullName>
    <inlineHelpText>Please select the service type desired</inlineHelpText>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Type</valueSetName>
    </valueSet>
</CustomField>