force-app/main/default/objects/Service_Ticket_Line__c/fields/Per_Unit_Weight_g__c.field-meta.xml
<CustomField>
    <fullName>Per_Unit_Weight_g__c</fullName>
    <inlineHelpText>Please select the transferring per unit weight</inlineHelpText>
    <label>Per Unit Weight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>453.60 (g)</fullName>
            </value>
            <value>
                <fullName>0.50 (g)</fullName>
            </value>
            <value>
                <fullName>1 (g)</fullName>
            </value>
            <value>
                <fullName>1 (each)</fullName>
            </value>
            <value>
                <fullName>3.54 (g)</fullName>
            </value>
            <value>
                <fullName>3.60 (g)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>