force-app/main/default/objects/Service_Ticket_Line__c/fields/PreRoll_Packaging__c.field-meta.xml
<CustomField>
    <fullName>PreRoll_Packaging__c</fullName>
    <inlineHelpText>Please select how many pre-rolls will be packed into retail ready pack</inlineHelpText>
    <label>Pre-Rolls per Pack</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prerolls_per_Pack</valueSetName>
    </valueSet>
</CustomField>