force-app/main/default/objects/Service_Ticket_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Packaged From</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Service Ticket Lines</relationshipLabel>
    <relationshipName>Service_Ticket_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>