force-app/main/default/objects/Service_Ticket_Line__c/fields/Qty_Label_Large__c.field-meta.xml
<CustomField>
    <fullName>Qty_Label_Large__c</fullName>
    <formula>IF(ISPICKVAL(Top_Front_Label__c, &apos;Large&apos;),1,0)+ 
IF(ISPICKVAL(Bottom_Back_Label__c, &apos;Large&apos;),1,0)+ 
IF(ISPICKVAL(Body_Tube_Label__c, &apos;Large&apos;),1,0)+ 
IF(ISPICKVAL(THC_CBD_Claim_Label__c, &apos;Large&apos;),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty Label | Large</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>