force-app/main/default/objects/Service_Ticket_Line__c/fields/Qty_of_Misc_Label__c.field-meta.xml
<CustomField>
    <fullName>Qty_of_Misc_Label__c</fullName>
    <inlineHelpText>Please enter Qty of misc applies to apply. Service charges will vary based on label size.</inlineHelpText>
    <label>Qty of Misc Label</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>