force-app/main/default/objects/Service_Ticket_Line__c/fields/Qty_Per_Multi_Unit__c.field-meta.xml
<CustomField>
    <fullName>Qty_Per_Multi_Unit__c</fullName>
    <inlineHelpText>Please enter the retail ready units to pack per case or carton. Leave Blank if multi-packing is NOT required</inlineHelpText>
    <label>Units per Case (MOQ)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>