force-app/main/default/objects/Service_Ticket_Line__c/fields/Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Date__c</fullName>
    <formula>Service_Ticket__r.Request_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>