force-app/main/default/objects/Service_Ticket_Line__c/fields/Retail_Wholesale_Price__c.field-meta.xml
<CustomField>
    <fullName>Retail_Wholesale_Price__c</fullName>
    <label>Retail Wholesale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>