force-app/main/default/objects/Service_Ticket_Line__c/fields/Service_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>Service_Quote_Status__c</fullName>
    <formula>TEXT(Brand_Quote__r.BQ_Status__c)</formula>
    <label>Service Quote Status</label>
    <type>Text</type>
</CustomField>