force-app/main/default/objects/Service_Ticket_Line__c/fields/Service_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Service_Ticket__c</fullName>
    <label>Service Ticket</label>
    <referenceTo>Service_Ticket__c</referenceTo>
    <relationshipLabel>Service Ticket Lines</relationshipLabel>
    <relationshipName>Service_Ticket_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>