force-app/main/default/objects/Service_Ticket_Line__c/fields/Source_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Batch_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Batch ID</label>
    <referenceTo>Harvest_Batch_Code__c</referenceTo>
    <relationshipLabel>Service Ticket Lines (Source Batch ID)</relationshipLabel>
    <relationshipName>Service_Ticket_Lines2</relationshipName>
    <type>Lookup</type>
</CustomField>