force-app/main/default/objects/Service_Ticket_Line__c/fields/Spl_Packaging_Notes__c.field-meta.xml
<CustomField>
    <fullName>Spl_Packaging_Notes__c</fullName>
    <inlineHelpText>Special packaging notes for service line item</inlineHelpText>
    <label>Special Packaging Notes</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>