force-app/main/default/objects/Service_Ticket_Line__c/fields/Strain__c.field-meta.xml
<CustomField>
    <fullName>Strain__c</fullName>
    <formula>New_Packaged_Product__r.Strain__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strain</label>
    <type>Text</type>
</CustomField>