force-app/main/default/objects/Service_Ticket_Line__c/fields/Strain_Type__c.field-meta.xml
<CustomField>
    <fullName>Strain_Type__c</fullName>
    <formula>TEXT(New_Packaged_Product__r.Strain__r.Strain_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strain Type</label>
    <type>Text</type>
</CustomField>