force-app/main/default/objects/Service_Ticket_Line__c/fields/Tamper_Type__c.field-meta.xml
<CustomField>
    <fullName>Tamper_Type__c</fullName>
    <inlineHelpText>Please select the type of tamper evident label to apply.</inlineHelpText>
    <label>Tamper Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tamper_Type</valueSetName>
    </valueSet>
</CustomField>