force-app/main/default/objects/Service_Ticket_Line__c/fields/Test_Required__c.field-meta.xml
<CustomField>
    <fullName>Test_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Required</label>
    <type>Checkbox</type>
</CustomField>