force-app/main/default/objects/Service_Ticket_Line__c/fields/Test_Status__c.field-meta.xml
<CustomField>
    <fullName>Test_Status__c</fullName>
    <label>Test Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lab_Test_Status</valueSetName>
    </valueSet>
</CustomField>