force-app/main/default/objects/Service_Ticket_Line__c/fields/Top_Front_Label__c.field-meta.xml
<CustomField>
    <fullName>Top_Front_Label__c</fullName>
    <inlineHelpText>Please select the type of label to apply: (Small &lt;= 1H x 1W x 2L), (Medium &lt;= 2H x 2W x 3L), (Large &gt;= 3H x 3W x 3L</inlineHelpText>
    <label>Top | Front Label</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Label_Type</valueSetName>
    </valueSet>
</CustomField>