force-app/main/default/objects/Service_Ticket_Line__c/fields/Total_Cannabis_Weight_UOM__c.field-meta.xml
<CustomField>
    <fullName>Total_Cannabis_Weight_UOM__c</fullName>
    <formula>TEXT(New_Packaged_Product__r.Cannabis_Weight_UOM__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cannabis Weight UOM</label>
    <type>Text</type>
</CustomField>