force-app/main/default/objects/Service_Ticket_Line__c/fields/Total_Converted_Cases__c.field-meta.xml
<CustomField>
    <fullName>Total_Converted_Cases__c</fullName>
    <inlineHelpText>Formula to calculate how many cases made based on Units per Case (MOQ)</inlineHelpText>
    <label>Total Converted Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>