force-app/main/default/objects/Service_Ticket_Line__c/fields/Total_Desired_Retail_Ready_Form__c.field-meta.xml
<CustomField>
    <fullName>Total_Desired_Retail_Ready_Form__c</fullName>
    <label>Del_Total Desired Retail Ready Form</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>