force-app/main/default/objects/Service_Ticket_Line__c/fields/Total_Label_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Label_Qty__c</fullName>
    <inlineHelpText>Total Label Qty based on service selection and conversion of single units or packs in retail ready form</inlineHelpText>
    <label>Total Label Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>