force-app/main/default/objects/Service_Ticket_Line__c/fields/Total_Pre_Roll_Packs__c.field-meta.xml
<CustomField>
    <fullName>Total_Pre_Roll_Packs__c</fullName>
    <formula>IF(ISBLANK(TEXT(PreRoll_Packaging__c)),0,Converted_Single_Qty__c  / 


CASE(PreRoll_Packaging__c , 
&apos;Prerolls Pack 1&apos;, 1,
&apos;Prerolls Pack 2&apos;, 2, 
&apos;Prerolls Pack 3&apos;, 3, 
&apos;Prerolls Pack 4&apos;, 4, 
&apos;Prerolls Pack 5&apos;, 5, 
&apos;Prerolls Pack 6&apos;, 6, 
&apos;Prerolls Pack 7&apos;, 7, 
&apos;Prerolls Pack 8&apos;, 8, 
&apos;Prerolls Pack 9&apos;, 9, 
&apos;Prerolls Pack 10&apos;, 10, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Pre-Roll Packs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>