force-app/main/default/objects/Service_Ticket_Line__c/fields/Total_Qty__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty__c</fullName>
    <formula>Total_Units__c * Qty_Per_Multi_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Del_Total Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>