force-app/main/default/objects/Service_Ticket_Line__c/fields/Total_Service_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Price__c</fullName>
    <formula>Brand_Quote__r.Total_Quoted_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total service price based on selection of services</inlineHelpText>
    <label>Total Service Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>