force-app/main/default/objects/Service_Ticket_Line__c/fields/Total_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Units__c</fullName>
    <inlineHelpText>Please enter the total qty of units to transfer</inlineHelpText>
    <label>Total Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>