force-app/main/default/objects/Service_Ticket_Line__c/fields/Transfer_of_Custody__c.field-meta.xml
<CustomField>
    <fullName>Transfer_of_Custody__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if product transfer ONLY and does NOT require labelling and or transformation services. Additional services only includes Testing or Transfer of COA, if applicable.</inlineHelpText>
    <label>Transfer of Custody</label>
    <type>Checkbox</type>
</CustomField>