force-app/main/default/objects/Service_Ticket_Line__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <inlineHelpText>Please enter the MTRC assigned UID</inlineHelpText>
    <label>Del_UID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>