force-app/main/default/objects/Service_Ticket_Line__c/fields/UID_New__c.field-meta.xml
<CustomField>
    <fullName>UID_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UID</label>
    <referenceTo>UID__c</referenceTo>
    <relationshipLabel>Service Ticket Lines</relationshipLabel>
    <relationshipName>Service_Ticket_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>